--- a/beer.html
+++ b/beer.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>About Us - 12th and Pine</title>
+  <title>Beer Collection - 12th & Pine</title>
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Lora:wght@400;600&display=swap" rel="stylesheet">
   <!-- Font Awesome for Icons -->
@@ -28,6 +28,7 @@
       --card-bg: #fff;
       --shadow-color: rgba(0, 0, 0, 0.2);
       --transition-speed: 0.3s;
+      --overlay-bg: rgba(0, 0, 0, 0.5);
     }
 
     /* Dark Mode Variables */
@@ -166,30 +167,24 @@
       transform: translateX(26px);
     }
 
-    /* About Us Section */
-    .about-section {
-      margin-top: 80px; /* Adjusted for fixed header */
-      padding: 60px 20px;
-      text-align: center;
-      background-color: var(--card-bg);
-      transition: background-color var(--transition-speed), box-shadow var(--transition-speed);
-      box-shadow: 0 10px 30px var(--shadow-color);
-      border-radius: 10px;
-      max-width: 1000px;
-      margin-left: auto;
-      margin-right: auto;
+    /* Main Content Styling */
+    main {
+      padding: 120px 50px 80px; /* Adjusted for fixed header */
+      max-width: 1200px;
+      margin: 0 auto;
+      transition: padding var(--transition-speed);
     }
 
-    /* About Us Heading */
-    .about-section h1 {
+    h1 {
       font-family: 'Playfair Display', serif;
       font-size: 3em;
-      margin-bottom: 30px;
+      text-align: center;
+      margin-bottom: 50px;
       color: var(--primary-color);
       position: relative;
     }
 
-    .about-section h1::after {
+    h1::after {
       content: '';
       width: 80px;
       height: 4px;
@@ -199,106 +194,91 @@
       border-radius: 2px;
     }
 
-    /* About Us Text */
-    .about-section p {
-      font-family: 'Lora', serif;
-      font-size: 1.2em;
-      color: var(--light-text);
-      max-width: 800px;
-      margin: 0 auto;
-      line-height: 1.8;
-      padding-bottom: 20px;
-      border-bottom: 2px solid var(--primary-color);
+    /* Best Sellers Styling */
+    h2.section-title {
+      font-family: 'Playfair Display', serif;
+      font-size: 2.2em;
+      color: var(--primary-color);
+      margin-bottom: 30px;
+      text-align: center;
     }
 
-    /* Button Styling */
-    .btn-home {
-      margin-top: 40px;
-      display: inline-block;
-      padding: 12px 25px;
-      font-size: 1.1em;
-      font-family: 'Lora', serif;
-      color: white;
-      background-color: var(--primary-color);
-      border-radius: 5px;
-      text-decoration: none;
-      transition: background-color var(--transition-speed), transform 0.3s ease;
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    /* Gallery Styling */
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+      gap: 30px;
+      margin-bottom: 80px; /* Adjusted space after Best Sellers */
     }
 
-    /* Hover effect for button */
-    .btn-home:hover {
-      background-color: #9c6f42;
-      transform: translateY(-3px);
-    }
-
-    /* Our Story Accordion */
-    .story-accordion {
-      margin-top: 50px;
-      text-align: left;
-      max-width: 800px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-    .accordion-item {
+    .product-card {
       background-color: var(--card-bg);
-      border: 1px solid #ddd;
-      border-radius: 5px;
-      margin-bottom: 15px;
+      border-radius: 10px;
+      overflow: hidden;
+      transition: transform var(--transition-speed), box-shadow var(--transition-speed);
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 20px;
+      text-align: center;
       box-shadow: 0 5px 15px var(--shadow-color);
-      transition: max-height var(--transition-speed), box-shadow var(--transition-speed);
+      transition: background-color var(--transition-speed), box-shadow var(--transition-speed);
     }
 
-    .accordion-header {
-      padding: 15px 20px;
-      cursor: pointer;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+    .product-card img {
+      max-width: 100%;
+      max-height: 200px;
+      object-fit: contain;
+      display: block;
+      margin-bottom: 20px;
+      transition: transform var(--transition-speed);
+      border-radius: 5px;
+    }
+
+    .product-card:hover img {
+      transform: scale(1.05);
+    }
+
+    .product-card h3 {
       font-family: 'Playfair Display', serif;
       font-size: 1.5em;
+      margin-bottom: 10px;
       color: var(--text-color);
-      background-color: transparent;
-      transition: background-color var(--transition-speed);
+      transition: color var(--transition-speed);
     }
 
-    .accordion-header:hover {
-      background-color: #f0f0f0;
-    }
-
-    .accordion-content {
-      max-height: 0;
-      overflow: hidden;
-      transition: max-height var(--transition-speed);
-      padding: 0 20px;
-    }
-
-    .accordion-content p {
+    .product-card p {
       font-family: 'Lora', serif;
       font-size: 1em;
       color: var(--light-text);
-      margin: 15px 0;
-      line-height: 1.6;
+      margin-bottom: 15px;
+      transition: color var(--transition-speed);
     }
 
-    .accordion-item.active .accordion-content {
-      max-height: 500px; /* Adjust as needed */
+    /* All Beers (Text-only, smaller size) */
+    .all-beers {
+      margin-top: 50px;
+      font-size: 0.9em;
     }
 
-    .accordion-item.active {
-      box-shadow: 0 10px 25px var(--shadow-color);
+    .beer-item {
+      margin-bottom: 20px;
+      padding: 10px;
+      border-bottom: 1px solid #ddd;
+      font-family: 'Lora', serif;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
 
-    .accordion-icon {
-      font-size: 1.2em;
-      color: var(--accent-color);
-      transition: transform var(--transition-speed);
+    .beer-item h3 {
+      font-family: 'Playfair Display', serif;
+      font-size: 1.3em;
+      color: var(--text-color);
+      margin-right: 15px;
     }
 
-    .accordion-item.active .accordion-icon {
-      transform: rotate(180deg);
-    }
 
     /* Footer Styling */
     footer {
@@ -307,7 +287,9 @@
       text-align: center;
       color: white;
       font-size: 0.9em;
-      position: relative;
+      position: fixed;
+      width: 100%;
+      bottom: 0;
       transition: background-color var(--transition-speed);
     }
 
@@ -327,31 +309,41 @@
       color: var(--accent-color);
     }
 
-    /* Animation Keyframes */
-    @keyframes fadeInDown {
-      from {
-        opacity: 0;
-        transform: translateY(-50px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    @keyframes fadeInUp {
-      from {
-        opacity: 0;
-        transform: translateY(50px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    /* Responsive Styling */
+    /* Media Queries */
     @media (max-width: 768px) {
+      main {
+        padding: 100px 20px 60px;
+      }
+
+      h1 {
+        font-size: 2.5em;
+      }
+
+      .product-card h3,
+      .beer-item h3 {
+        font-size: 1.3em;
+      }
+
+      .product-card p,
+      .beer-item p {
+        font-size: 0.9em;
+      }
+
+      .gallery {
+        grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+        gap: 20px;
+      }
+
+      .product-card img {
+        max-height: 150px;
+      }
+
+      /* Show hamburger menu */
+      .hamburger {
+        display: flex;
+      }
+
+      /* Hide nav-links and show when active */
       .nav-links {
         position: absolute;
         top: 60px;
@@ -370,45 +362,51 @@
         margin: 15px 0;
         text-align: center;
       }
-
-      .hamburger {
-        display: flex;
-      }
-
-      .about-section {
-        padding: 40px 15px;
-      }
-
-      .about-section h1 {
-        font-size: 2.5em;
-      }
-
-      .about-section p {
-        font-size: 1.1em;
-      }
-
-      .btn-home {
-        padding: 10px 20px;
-        font-size: 1em;
-      }
-
-      .story-accordion {
-        padding: 0 10px;
-      }
     }
 
     @media (max-width: 480px) {
-      .about-section h1 {
+      h1 {
         font-size: 2em;
       }
 
-      .about-section p {
-        font-size: 1em;
+      .product-card h3,
+      .beer-item h3 {
+        font-size: 1.1em;
       }
 
-      .accordion-header {
-        font-size: 1.3em;
+      .product-card p,
+      .beer-item p {
+        font-size: 0.8em;
       }
+
+      .gallery {
+        grid-template-columns: 1fr;
+        gap: 15px;
+      }
+
+      footer {
+        padding: 15px;
+      }
+    }
+
+    /* Animations */
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
+    @keyframes slideDown {
+      from { transform: translateY(-50px); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
+    }
+
+    /* Accessibility Focus Styles */
+    a:focus,
+    button:focus,
+    input:focus,
+    textarea:focus {
+      outline: 2px dashed var(--accent-color);
+      outline-offset: 4px;
     }
   </style>
 </head>
@@ -418,14 +416,14 @@
   <header>
     <div class="logo">12th & Pine</div>
     <nav>
-      <div class="hamburger" id="hamburger">
+      <div class="hamburger" id="hamburger" aria-label="Toggle Navigation Menu" tabindex="0">
         <span></span>
         <span></span>
         <span></span>
       </div>
       <ul class="nav-links" id="nav-links">
-        <li><a href="bushrawebsite1.html">Home</a></li>
-        <li><a href="aboutus.html" class="active">About Us</a></li>
+        <li><a href="bushraswebsite.html">Home</a></li>
+        <li><a href="aboutus.html">About Us</a></li>
         <li><a href="events.html">Events</a></li>
         <li><a href="collections.html">Collections</a></li>
         <li><a href="recipes.html">Recipes</a></li>
@@ -440,66 +438,80 @@
     </nav>
   </header>
 
-  <!-- About Us Section -->
-  <div class="about-section">
-    <h1>About 12th & Pine</h1>
-    <p>
-      Welcome to 12th & Pine. We specialize in providing fine wines and spirits from around the world. Our passion for wine
-      drives us to carefully curate an exquisite collection that reflects the richness of tradition and the elegance of the modern
-      era. Whether you’re looking to savor a moment of luxury or to celebrate an occasion with something extraordinary, we are
-      here to offer you a unique experience in every bottle. Join us at 12th & Pine, where every sip tells a story.
-    </p>
-    <a href="bushrawebsite1.html" class="btn-home">Back to Home</a>
+  <!-- Main Content -->
+  <main>
+    <h1>Beer Collection</h1>
 
-    <!-- Our Story Accordion -->
-    <div class="story-accordion">
-      <!-- Accordion Item 1 -->
-      <div class="accordion-item">
-        <div class="accordion-header">
-          <h3>Our Mission</h3>
-          <i class="fas fa-chevron-down accordion-icon"></i>
-        </div>
-        <div class="accordion-content">
-          <p>
-            At 12th & Pine, our mission is to provide an unparalleled selection of fine wines and spirits that cater to both
-            connoisseurs and casual enthusiasts. We believe in the art of storytelling through every bottle, offering our
-            customers not just products, but experiences that celebrate craftsmanship, heritage, and innovation.
-          </p>
-        </div>
+    <!-- Best Sellers Section -->
+    <h2 class="section-title">Best Sellers</h2>
+    <div class="gallery">
+
+      <!-- Product 1: Heineken -->
+      <div class="product-card">
+        <img src="heineken.jpg" alt="Heineken" loading="lazy">
+        <h3>Heineken</h3>
+        <p>A classic Dutch lager with a crisp and refreshing taste.</p>
       </div>
 
-      <!-- Accordion Item 2 -->
-      <div class="accordion-item">
-        <div class="accordion-header">
-          <h3>Our History</h3>
-          <i class="fas fa-chevron-down accordion-icon"></i>
-        </div>
-        <div class="accordion-content">
-          <p>
-            Founded in 2010, 12th & Pine began as a small boutique store with a vision to bring the finest wines and spirits
-            from renowned vineyards and distilleries to our local community. Over the years, we have expanded our offerings,
-            established partnerships with top producers worldwide, and built a loyal customer base that values quality and
-            authenticity.
-          </p>
-        </div>
+      <!-- Product 2: Guinness Draught -->
+      <div class="product-card">
+        <img src="guinness_draught.png" alt="Guinness Draught" loading="lazy">
+        <h3>Guinness Draught</h3>
+        <p>An iconic Irish stout known for its rich, creamy texture.</p>
       </div>
 
-      <!-- Accordion Item 3 -->
-      <div class="accordion-item">
-        <div class="accordion-header">
-          <h3>Our Team</h3>
-          <i class="fas fa-chevron-down accordion-icon"></i>
-        </div>
-        <div class="accordion-content">
-          <p>
-            Our team is composed of passionate individuals who share a deep appreciation for fine wines and spirits. From
-            sommeliers to sales experts, each member brings unique expertise and dedication to ensure that our customers receive
-            personalized recommendations and exceptional service.
-          </p>
-        </div>
+      <!-- Product 3: Sierra Nevada Pale Ale -->
+      <div class="product-card">
+        <img src="sierra_nevada_pale_ale.png" alt="Sierra Nevada Pale Ale" loading="lazy">
+        <h3>Sierra Nevada Pale Ale</h3>
+        <p>A well-balanced American pale ale with bold hop flavors.</p>
       </div>
+
+      <!-- Product 4: Corona Extra -->
+      <div class="product-card">
+        <img src="corona_extra.jpg" alt="Corona Extra" loading="lazy">
+        <h3>Corona Extra</h3>
+        <p>A light Mexican lager perfect for warm, sunny days.</p>
+      </div>
+
+      <!-- Product 5: Blue Moon Belgian White -->
+      <div class="product-card">
+        <img src="blue_moon_belgian_white.png" alt="Blue Moon Belgian White" loading="lazy">
+        <h3>Blue Moon Belgian White</h3>
+        <p>A smooth and citrusy wheat beer, often served with an orange slice.</p>
+      </div>
+
     </div>
-  </div>
+
+    <!-- All Beers Section (Text-Only) -->
+    <h2 class="section-title">All Beers</h2>
+    <div class="all-beers">
+
+      <!-- Text-Only Beer Items -->
+      <div class="beer-item">
+        <h3>Budweiser</h3>
+        <p>An American-style lager known for its smooth and crisp taste.</p>
+      </div>
+
+      <div class="beer-item">
+        <h3>Coors Light</h3>
+        <p>A light American lager with a clean and refreshing finish.</p>
+      </div>
+
+      <div class="beer-item">
+        <h3>Asahi Super Dry</h3>
+        <p>A Japanese lager with a dry and crisp flavor profile.</p>
+      </div>
+
+      <div class="beer-item">
+        <h3>Brooklyn Lager</h3>
+        <p>An amber lager with a balanced malt and hop character.</p>
+      </div>
+
+      <!-- More beer items here -->
+
+    </div>
+  </main>
 
   <!-- Footer -->
   <footer>
@@ -523,6 +535,14 @@
       hamburger.classList.toggle('active');
     });
 
+    // Allow hamburger menu to be toggled via Enter key for accessibility
+    hamburger.addEventListener('keypress', (e) => {
+      if (e.key === 'Enter') {
+        navLinks.classList.toggle('active');
+        hamburger.classList.toggle('active');
+      }
+    });
+
     // Dark Mode Toggle
     const themeToggle = document.getElementById('theme-toggle');
     const currentTheme = localStorage.getItem('theme') ? localStorage.getItem('theme') : null;
@@ -543,24 +563,6 @@
         document.documentElement.setAttribute('data-theme', 'light');
         localStorage.setItem('theme', 'light');
       }
-    });
-
-    // Accordion Functionality
-    const accordionHeaders = document.querySelectorAll('.accordion-header');
-
-    accordionHeaders.forEach(header => {
-      header.addEventListener('click', () => {
-        const parent = header.parentElement;
-        const isActive = parent.classList.contains('active');
-
-        document.querySelectorAll('.accordion-item').forEach(item => {
-          item.classList.remove('active');
-        });
-
-        if (!isActive) {
-          parent.classList.add('active');
-        }
-      });
     });
   </script>
 </body>
