--- a/bushrawebsite1.html
+++ b/bushrawebsite1.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>About Us - 12th and Pine</title>
+  <title>12th and Pine - Fine Wines and Spirits</title>
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Lora:wght@400;600&display=swap" rel="stylesheet">
   <!-- Font Awesome for Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <!-- Swiper CSS for Carousel -->
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <style>
     /* Basic Reset */
     * {
@@ -23,11 +25,12 @@
       --background-color: #f4f4f4;
       --text-color: #333;
       --light-text: #555;
-      --header-bg: rgba(0, 0, 0, 0.7);
+      --header-bg: rgba(0, 0, 0, 0.6);
       --footer-bg: rgba(0, 0, 0, 0.8);
       --card-bg: #fff;
       --shadow-color: rgba(0, 0, 0, 0.2);
       --transition-speed: 0.3s;
+      --overlay-bg: rgba(0, 0, 0, 0.4);
     }
 
     /* Dark Mode Variables */
@@ -39,6 +42,7 @@
       --footer-bg: rgba(0, 0, 0, 0.9);
       --card-bg: #2e2e2e;
       --shadow-color: rgba(255, 255, 255, 0.1);
+      --overlay-bg: rgba(0, 0, 0, 0.6);
     }
 
     body {
@@ -47,6 +51,30 @@
       background-color: var(--background-color);
       overflow-x: hidden;
       transition: background-color var(--transition-speed), color var(--transition-speed);
+    }
+
+    /* Fullscreen Video */
+    #myVideo {
+      position: fixed;
+      right: 0;
+      bottom: 0;
+      min-width: 100%;
+      min-height: 100%;
+      z-index: -2;
+      object-fit: cover;
+      transition: opacity var(--transition-speed);
+    }
+
+    /* Dark Overlay */
+    .overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: var(--overlay-bg);
+      z-index: -1;
+      transition: background var(--transition-speed);
     }
 
     /* Header Styling */
@@ -166,30 +194,87 @@
       transform: translateX(26px);
     }
 
-    /* About Us Section */
-    .about-section {
-      margin-top: 80px; /* Adjusted for fixed header */
-      padding: 60px 20px;
+    /* Centering Content */
+    .content {
+      position: relative;
+      z-index: 1;
+      color: white;
       text-align: center;
-      background-color: var(--card-bg);
-      transition: background-color var(--transition-speed), box-shadow var(--transition-speed);
-      box-shadow: 0 10px 30px var(--shadow-color);
-      border-radius: 10px;
-      max-width: 1000px;
-      margin-left: auto;
-      margin-right: auto;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      padding: 20px;
+      transition: padding var(--transition-speed);
     }
 
-    /* About Us Heading */
-    .about-section h1 {
+    /* Hero Heading */
+    h1 {
       font-family: 'Playfair Display', serif;
-      font-size: 3em;
+      font-size: 4em;
+      margin-bottom: 20px;
+      letter-spacing: 2px;
+      text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+      animation: fadeInDown 1s ease-out;
+    }
+
+    /* Hero Subheading */
+    p {
+      font-size: 1.5em;
+      font-weight: 300;
       margin-bottom: 30px;
+      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
+      animation: fadeInUp 1s ease-out;
+    }
+
+    /* Button Style */
+    .btn-primary {
+      background-color: var(--primary-color);
+      color: white;
+      padding: 12px 30px;
+      border: none;
+      border-radius: 5px;
+      font-family: 'Lora', serif;
+      font-size: 1.1em;
+      cursor: pointer;
+      text-decoration: none;
+      transition: background-color var(--transition-speed), transform 0.2s;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    }
+
+    .btn-primary:hover {
+      background-color: #9c6f42;
+      transform: scale(1.05);
+    }
+
+    /* Scroll Down Indicator */
+    .scroll-down {
+      position: absolute;
+      bottom: 20px;
+      font-size: 2em;
+      color: white;
+      animation: bounce 2s infinite;
+      cursor: pointer;
+    }
+
+    /* Events Section */
+    .events-section {
+      padding: 60px 30px;
+      background-color: var(--background-color);
+      text-align: center;
+      transition: background-color var(--transition-speed);
+    }
+
+    .events-section h2 {
+      font-family: 'Playfair Display', serif;
+      font-size: 2.5em;
       color: var(--primary-color);
+      margin-bottom: 20px;
       position: relative;
     }
 
-    .about-section h1::after {
+    .events-section h2::after {
       content: '';
       width: 80px;
       height: 4px;
@@ -199,105 +284,50 @@
       border-radius: 2px;
     }
 
-    /* About Us Text */
-    .about-section p {
-      font-family: 'Lora', serif;
-      font-size: 1.2em;
-      color: var(--light-text);
-      max-width: 800px;
-      margin: 0 auto;
-      line-height: 1.8;
-      padding-bottom: 20px;
-      border-bottom: 2px solid var(--primary-color);
+    /* Swiper Carousel */
+    .swiper-container {
+      width: 100%;
+      padding: 20px 0;
     }
 
-    /* Button Styling */
-    .btn-home {
-      margin-top: 40px;
-      display: inline-block;
-      padding: 12px 25px;
-      font-size: 1.1em;
-      font-family: 'Lora', serif;
-      color: white;
-      background-color: var(--primary-color);
-      border-radius: 5px;
-      text-decoration: none;
-      transition: background-color var(--transition-speed), transform 0.3s ease;
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-    }
-
-    /* Hover effect for button */
-    .btn-home:hover {
-      background-color: #9c6f42;
-      transform: translateY(-3px);
-    }
-
-    /* Our Story Accordion */
-    .story-accordion {
-      margin-top: 50px;
-      text-align: left;
-      max-width: 800px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-    .accordion-item {
+    .swiper-slide {
       background-color: var(--card-bg);
-      border: 1px solid #ddd;
-      border-radius: 5px;
-      margin-bottom: 15px;
-      box-shadow: 0 5px 15px var(--shadow-color);
-      transition: max-height var(--transition-speed), box-shadow var(--transition-speed);
-    }
-
-    .accordion-header {
-      padding: 15px 20px;
-      cursor: pointer;
+      border-radius: 10px;
+      box-shadow: 0 10px 30px var(--shadow-color);
       display: flex;
-      justify-content: space-between;
+      flex-direction: column;
       align-items: center;
+      padding: 20px;
+      transition: transform var(--transition-speed), box-shadow var(--transition-speed);
+    }
+
+    .swiper-slide:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 15px 35px var(--shadow-color);
+    }
+
+    .swiper-slide img {
+      width: 100%;
+      max-width: 300px;
+      height: auto;
+      border-radius: 10px;
+      margin-bottom: 20px;
+    }
+
+    .swiper-slide h3 {
       font-family: 'Playfair Display', serif;
-      font-size: 1.5em;
+      font-size: 1.8em;
       color: var(--text-color);
-      background-color: transparent;
-      transition: background-color var(--transition-speed);
+      margin-bottom: 10px;
+      text-align: center;
     }
 
-    .accordion-header:hover {
-      background-color: #f0f0f0;
-    }
-
-    .accordion-content {
-      max-height: 0;
-      overflow: hidden;
-      transition: max-height var(--transition-speed);
-      padding: 0 20px;
-    }
-
-    .accordion-content p {
+    .swiper-slide p {
       font-family: 'Lora', serif;
       font-size: 1em;
       color: var(--light-text);
-      margin: 15px 0;
+      text-align: center;
       line-height: 1.6;
-    }
-
-    .accordion-item.active .accordion-content {
-      max-height: 500px; /* Adjust as needed */
-    }
-
-    .accordion-item.active {
-      box-shadow: 0 10px 25px var(--shadow-color);
-    }
-
-    .accordion-icon {
-      font-size: 1.2em;
-      color: var(--accent-color);
-      transition: transform var(--transition-speed);
-    }
-
-    .accordion-item.active .accordion-icon {
-      transform: rotate(180deg);
     }
 
     /* Footer Styling */
@@ -350,6 +380,18 @@
       }
     }
 
+    @keyframes bounce {
+      0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0);
+      }
+      40% {
+        transform: translateY(-10px);
+      }
+      60% {
+        transform: translateY(-5px);
+      }
+    }
+
     /* Responsive Styling */
     @media (max-width: 768px) {
       .nav-links {
@@ -375,39 +417,25 @@
         display: flex;
       }
 
-      .about-section {
-        padding: 40px 15px;
+      .content {
+        padding: 120px 15px 80px;
       }
 
-      .about-section h1 {
+      h1 {
         font-size: 2.5em;
       }
 
-      .about-section p {
-        font-size: 1.1em;
+      p {
+        font-size: 1.2em;
       }
 
-      .btn-home {
+      .btn-primary {
         padding: 10px 20px;
         font-size: 1em;
       }
 
-      .story-accordion {
-        padding: 0 10px;
-      }
-    }
-
-    @media (max-width: 480px) {
-      .about-section h1 {
-        font-size: 2em;
-      }
-
-      .about-section p {
-        font-size: 1em;
-      }
-
-      .accordion-header {
-        font-size: 1.3em;
+      .scroll-down {
+        font-size: 1.5em;
       }
     }
   </style>
@@ -424,8 +452,8 @@
         <span></span>
       </div>
       <ul class="nav-links" id="nav-links">
-        <li><a href="bushrawebsite1.html">Home</a></li>
-        <li><a href="aboutus.html" class="active">About Us</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="aboutus.html">About Us</a></li>
         <li><a href="events.html">Events</a></li>
         <li><a href="collections.html">Collections</a></li>
         <li><a href="recipes.html">Recipes</a></li>
@@ -440,66 +468,65 @@
     </nav>
   </header>
 
-  <!-- About Us Section -->
-  <div class="about-section">
-    <h1>About 12th & Pine</h1>
-    <p>
-      Welcome to 12th & Pine. We specialize in providing fine wines and spirits from around the world. Our passion for wine
-      drives us to carefully curate an exquisite collection that reflects the richness of tradition and the elegance of the modern
-      era. Whether you’re looking to savor a moment of luxury or to celebrate an occasion with something extraordinary, we are
-      here to offer you a unique experience in every bottle. Join us at 12th & Pine, where every sip tells a story.
-    </p>
-    <a href="bushrawebsite1.html" class="btn-home">Back to Home</a>
+  <!-- Fullscreen Background Video -->
+  <video autoplay muted loop id="myVideo">
+    <source src="b.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
 
-    <!-- Our Story Accordion -->
-    <div class="story-accordion">
-      <!-- Accordion Item 1 -->
-      <div class="accordion-item">
-        <div class="accordion-header">
-          <h3>Our Mission</h3>
-          <i class="fas fa-chevron-down accordion-icon"></i>
-        </div>
-        <div class="accordion-content">
-          <p>
-            At 12th & Pine, our mission is to provide an unparalleled selection of fine wines and spirits that cater to both
-            connoisseurs and casual enthusiasts. We believe in the art of storytelling through every bottle, offering our
-            customers not just products, but experiences that celebrate craftsmanship, heritage, and innovation.
-          </p>
-        </div>
-      </div>
+  <!-- Dark Overlay -->
+  <div class="overlay"></div>
 
-      <!-- Accordion Item 2 -->
-      <div class="accordion-item">
-        <div class="accordion-header">
-          <h3>Our History</h3>
-          <i class="fas fa-chevron-down accordion-icon"></i>
-        </div>
-        <div class="accordion-content">
-          <p>
-            Founded in 2010, 12th & Pine began as a small boutique store with a vision to bring the finest wines and spirits
-            from renowned vineyards and distilleries to our local community. Over the years, we have expanded our offerings,
-            established partnerships with top producers worldwide, and built a loyal customer base that values quality and
-            authenticity.
-          </p>
-        </div>
-      </div>
-
-      <!-- Accordion Item 3 -->
-      <div class="accordion-item">
-        <div class="accordion-header">
-          <h3>Our Team</h3>
-          <i class="fas fa-chevron-down accordion-icon"></i>
-        </div>
-        <div class="accordion-content">
-          <p>
-            Our team is composed of passionate individuals who share a deep appreciation for fine wines and spirits. From
-            sommeliers to sales experts, each member brings unique expertise and dedication to ensure that our customers receive
-            personalized recommendations and exceptional service.
-          </p>
-        </div>
-      </div>
-    </div>
+  <!-- Overlay Content -->
+  <div class="content">
+    <h1>12th & Pine</h1>
+    <p>Fine Wines, Timeless Moments</p>
+    <a href="collections.html" class="btn-primary">Explore Our Collection</a>
+    <a href="#events-section" class="scroll-down" aria-label="Scroll Down"><i class="fas fa-chevron-down"></i></a>
   </div>
+
+  <!-- Events Section with Carousel -->
+  <section class="events-section" id="events-section">
+    <h2>Upcoming Events</h2>
+    <!-- Swiper -->
+    <div class="swiper-container">
+      <div class="swiper-wrapper">
+        <!-- Event Slide 1 -->
+        <div class="swiper-slide">
+          <div class="event-card">
+            <h3>Wine Tasting Gala</h3>
+            <p>Join us for an exclusive wine tasting event featuring a selection of our finest wines.</p>
+            <p><strong>Date:</strong> October 15, 2024</p>
+            <a href="event_inquiry.html" class="btn-primary">Inquire About Catering</a>
+          </div>
+        </div>
+        <!-- Event Slide 2 -->
+        <div class="swiper-slide">
+          <div class="event-card">
+            <h3>Corporate Wine Mixer</h3>
+            <p>A corporate mixer with top-tier wines to complement networking and business discussions.</p>
+            <p><strong>Date:</strong> November 5, 2024</p>
+            <a href="event_inquiry.html" class="btn-primary">Inquire About Catering</a>
+          </div>
+        </div>
+        <!-- Event Slide 3 -->
+        <div class="swiper-slide">
+          <div class="event-card">
+            <h3>Holiday Celebration</h3>
+            <p>Celebrate the holidays with an exquisite collection of seasonal wines and spirits.</p>
+            <p><strong>Date:</strong> December 20, 2024</p>
+            <a href="event_inquiry.html" class="btn-primary">Inquire About Catering</a>
+          </div>
+        </div>
+        <!-- Add more event slides as needed -->
+      </div>
+      <!-- Add Pagination -->
+      <div class="swiper-pagination"></div>
+      <!-- Add Navigation -->
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+    </div>
+  </section>
 
   <!-- Footer -->
   <footer>
@@ -512,6 +539,8 @@
     </div>
   </footer>
 
+  <!-- Swiper JS for Carousel -->
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <!-- JavaScript for Interactive Features -->
   <script>
     // Hamburger Menu Toggle
@@ -545,23 +574,63 @@
       }
     });
 
-    // Accordion Functionality
-    const accordionHeaders = document.querySelectorAll('.accordion-header');
-
-    accordionHeaders.forEach(header => {
-      header.addEventListener('click', () => {
-        const parent = header.parentElement;
-        const isActive = parent.classList.contains('active');
-
-        document.querySelectorAll('.accordion-item').forEach(item => {
-          item.classList.remove('active');
-        });
-
-        if (!isActive) {
-          parent.classList.add('active');
-        }
-      });
+    // Scroll Down Smooth Scroll
+    const scrollDown = document.querySelector('.scroll-down');
+    scrollDown.addEventListener('click', () => {
+      document.querySelector('#events-section').scrollIntoView({ behavior: 'smooth' });
     });
+
+    // Initialize Swiper Carousel for Events
+    const swiper = new Swiper('.swiper-container', {
+      // Optional parameters
+      loop: true,
+      slidesPerView: 3,
+      spaceBetween: 30,
+      autoplay: {
+        delay: 5000,
+        disableOnInteraction: false,
+      },
+      // If we need pagination
+      pagination: {
+        el: '.swiper-pagination',
+        clickable: true,
+      },
+      // Navigation arrows
+      navigation: {
+        nextEl: '.swiper-button-next',
+        prevEl: '.swiper-button-prev',
+      },
+      // Responsive breakpoints
+      breakpoints: {
+        640: {
+          slidesPerView: 1,
+        },
+        768: {
+          slidesPerView: 2,
+        },
+        1024: {
+          slidesPerView: 3,
+        },
+      }
+    });
+
+    // Pause video when not visible
+    const myVideo = document.getElementById('myVideo');
+    const observer = new IntersectionObserver(
+      entries => {
+        entries.forEach(entry => {
+          if (!entry.isIntersecting) {
+            myVideo.pause();
+          } else {
+            myVideo.play();
+          }
+        });
+      },
+      { threshold: 0.25 }
+    );
+
+    observer.observe(document.querySelector('.content'));
+
   </script>
 </body>
 </html>
