--- a/collections.html
+++ b/collections.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>About Us - 12th and Pine</title>
+  <title>Our Collection - 12th & Pine</title>
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Lora:wght@400;600&display=swap" rel="stylesheet">
   <!-- Font Awesome for Icons -->
@@ -166,30 +166,24 @@
       transform: translateX(26px);
     }
 
-    /* About Us Section */
-    .about-section {
-      margin-top: 80px; /* Adjusted for fixed header */
-      padding: 60px 20px;
-      text-align: center;
-      background-color: var(--card-bg);
-      transition: background-color var(--transition-speed), box-shadow var(--transition-speed);
-      box-shadow: 0 10px 30px var(--shadow-color);
-      border-radius: 10px;
-      max-width: 1000px;
-      margin-left: auto;
-      margin-right: auto;
+    /* Main Content Styling */
+    main {
+      padding: 100px 50px 80px; /* Adjusted for fixed header */
+      max-width: 1200px;
+      margin: 0 auto;
+      transition: padding var(--transition-speed);
     }
 
-    /* About Us Heading */
-    .about-section h1 {
+    h1 {
       font-family: 'Playfair Display', serif;
       font-size: 3em;
-      margin-bottom: 30px;
+      text-align: center;
+      margin-bottom: 50px;
       color: var(--primary-color);
       position: relative;
     }
 
-    .about-section h1::after {
+    h1::after {
       content: '';
       width: 80px;
       height: 4px;
@@ -199,105 +193,82 @@
       border-radius: 2px;
     }
 
-    /* About Us Text */
-    .about-section p {
-      font-family: 'Lora', serif;
-      font-size: 1.2em;
-      color: var(--light-text);
-      max-width: 800px;
-      margin: 0 auto;
-      line-height: 1.8;
-      padding-bottom: 20px;
-      border-bottom: 2px solid var(--primary-color);
+    /* Category Cards Styling */
+    .category-cards {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+      gap: 30px;
     }
 
-    /* Button Styling */
-    .btn-home {
-      margin-top: 40px;
-      display: inline-block;
-      padding: 12px 25px;
-      font-size: 1.1em;
-      font-family: 'Lora', serif;
-      color: white;
-      background-color: var(--primary-color);
-      border-radius: 5px;
-      text-decoration: none;
-      transition: background-color var(--transition-speed), transform 0.3s ease;
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-    }
-
-    /* Hover effect for button */
-    .btn-home:hover {
-      background-color: #9c6f42;
-      transform: translateY(-3px);
-    }
-
-    /* Our Story Accordion */
-    .story-accordion {
-      margin-top: 50px;
-      text-align: left;
-      max-width: 800px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-    .accordion-item {
+    .category-card {
       background-color: var(--card-bg);
-      border: 1px solid #ddd;
-      border-radius: 5px;
-      margin-bottom: 15px;
-      box-shadow: 0 5px 15px var(--shadow-color);
-      transition: max-height var(--transition-speed), box-shadow var(--transition-speed);
-    }
-
-    .accordion-header {
-      padding: 15px 20px;
-      cursor: pointer;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      font-family: 'Playfair Display', serif;
-      font-size: 1.5em;
-      color: var(--text-color);
-      background-color: transparent;
-      transition: background-color var(--transition-speed);
-    }
-
-    .accordion-header:hover {
-      background-color: #f0f0f0;
-    }
-
-    .accordion-content {
-      max-height: 0;
+      border-radius: 10px;
       overflow: hidden;
-      transition: max-height var(--transition-speed);
-      padding: 0 20px;
+      transition: transform var(--transition-speed), box-shadow var(--transition-speed);
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 20px;
+      text-align: center;
+      box-shadow: 0 5px 15px var(--shadow-color);
     }
 
-    .accordion-content p {
+    /* Ensuring images are fully visible and resized properly */
+    .category-card img {
+      max-width: 100%;
+      max-height: 200px;
+      object-fit: contain;
+      display: block;
+      margin-bottom: 20px;
+      transition: transform var(--transition-speed);
+      border-radius: 5px;
+    }
+
+    .category-card:hover img {
+      transform: scale(1.05);
+    }
+
+    .category-card h2 {
+      font-family: 'Playfair Display', serif;
+      font-size: 1.8em;
+      margin: 15px 0;
+      color: var(--text-color);
+      transition: color var(--transition-speed);
+    }
+
+    .category-card p {
       font-family: 'Lora', serif;
       font-size: 1em;
       color: var(--light-text);
-      margin: 15px 0;
+      margin-bottom: 15px;
+      padding: 0 10px;
       line-height: 1.6;
     }
 
-    .accordion-item.active .accordion-content {
-      max-height: 500px; /* Adjust as needed */
+    .btn-details {
+      background-color: var(--primary-color);
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      font-family: 'Lora', serif;
+      font-size: 1em;
+      cursor: pointer;
+      text-decoration: none;
+      transition: background-color var(--transition-speed), transform 0.2s;
+      margin-top: auto;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     }
 
-    .accordion-item.active {
-      box-shadow: 0 10px 25px var(--shadow-color);
+    .btn-details:hover {
+      background-color: #9c6f42;
+      transform: scale(1.05);
     }
 
-    .accordion-icon {
-      font-size: 1.2em;
-      color: var(--accent-color);
-      transition: transform var(--transition-speed);
-    }
-
-    .accordion-item.active .accordion-icon {
-      transform: rotate(180deg);
+    .category-card:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 15px 25px var(--shadow-color);
     }
 
     /* Footer Styling */
@@ -327,87 +298,42 @@
       color: var(--accent-color);
     }
 
-    /* Animation Keyframes */
-    @keyframes fadeInDown {
-      from {
-        opacity: 0;
-        transform: translateY(-50px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    @keyframes fadeInUp {
-      from {
-        opacity: 0;
-        transform: translateY(50px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    /* Responsive Styling */
+    /* Responsive Design */
     @media (max-width: 768px) {
-      .nav-links {
-        position: absolute;
-        top: 60px;
-        left: -100%;
-        flex-direction: column;
-        background-color: var(--header-bg);
-        width: 100%;
-        transition: left var(--transition-speed);
+      main {
+        padding: 100px 20px 60px;
       }
 
-      .nav-links.active {
-        left: 0;
-      }
-
-      .nav-links li {
-        margin: 15px 0;
-        text-align: center;
-      }
-
-      .hamburger {
-        display: flex;
-      }
-
-      .about-section {
-        padding: 40px 15px;
-      }
-
-      .about-section h1 {
+      h1 {
         font-size: 2.5em;
       }
 
-      .about-section p {
-        font-size: 1.1em;
+      .category-card h2 {
+        font-size: 1.5em;
       }
 
-      .btn-home {
-        padding: 10px 20px;
+      .btn-details {
         font-size: 1em;
+        padding: 8px 16px;
       }
 
-      .story-accordion {
-        padding: 0 10px;
+      .category-card img {
+        max-height: 150px;
       }
     }
 
     @media (max-width: 480px) {
-      .about-section h1 {
+      h1 {
         font-size: 2em;
       }
 
-      .about-section p {
-        font-size: 1em;
+      .category-card h2 {
+        font-size: 1.3em;
       }
 
-      .accordion-header {
-        font-size: 1.3em;
+      .btn-details {
+        font-size: 0.9em;
+        padding: 6px 12px;
       }
     }
   </style>
@@ -418,16 +344,16 @@
   <header>
     <div class="logo">12th & Pine</div>
     <nav>
-      <div class="hamburger" id="hamburger">
+      <div class="hamburger" id="hamburger" aria-label="Toggle Navigation Menu" tabindex="0">
         <span></span>
         <span></span>
         <span></span>
       </div>
       <ul class="nav-links" id="nav-links">
         <li><a href="bushrawebsite1.html">Home</a></li>
-        <li><a href="aboutus.html" class="active">About Us</a></li>
+        <li><a href="aboutus.html">About Us</a></li>
         <li><a href="events.html">Events</a></li>
-        <li><a href="collections.html">Collections</a></li>
+        <li><a href="collections.html" class="active">Collections</a></li>
         <li><a href="recipes.html">Recipes</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li>
@@ -440,66 +366,72 @@
     </nav>
   </header>
 
-  <!-- About Us Section -->
-  <div class="about-section">
-    <h1>About 12th & Pine</h1>
-    <p>
-      Welcome to 12th & Pine. We specialize in providing fine wines and spirits from around the world. Our passion for wine
-      drives us to carefully curate an exquisite collection that reflects the richness of tradition and the elegance of the modern
-      era. Whether you’re looking to savor a moment of luxury or to celebrate an occasion with something extraordinary, we are
-      here to offer you a unique experience in every bottle. Join us at 12th & Pine, where every sip tells a story.
-    </p>
-    <a href="bushrawebsite1.html" class="btn-home">Back to Home</a>
+  <!-- Main Content -->
+  <main>
+    <h1>Our Collection</h1>
 
-    <!-- Our Story Accordion -->
-    <div class="story-accordion">
-      <!-- Accordion Item 1 -->
-      <div class="accordion-item">
-        <div class="accordion-header">
-          <h3>Our Mission</h3>
-          <i class="fas fa-chevron-down accordion-icon"></i>
-        </div>
-        <div class="accordion-content">
-          <p>
-            At 12th & Pine, our mission is to provide an unparalleled selection of fine wines and spirits that cater to both
-            connoisseurs and casual enthusiasts. We believe in the art of storytelling through every bottle, offering our
-            customers not just products, but experiences that celebrate craftsmanship, heritage, and innovation.
-          </p>
-        </div>
+    <div class="category-cards">
+
+      <!-- Whiskey Category -->
+      <div class="category-card" data-category="Whiskey">
+        <img src="whiskey.png" alt="Whiskey Collection" loading="lazy">
+        <h2>Whiskey</h2>
+        <p>Indulge in a wide selection of premium whiskeys, from smooth bourbons to robust Scotch whiskies.</p>
+        <a href="whiskey.html" class="btn-details" aria-label="View Whiskey Details">View Details</a>
       </div>
 
-      <!-- Accordion Item 2 -->
-      <div class="accordion-item">
-        <div class="accordion-header">
-          <h3>Our History</h3>
-          <i class="fas fa-chevron-down accordion-icon"></i>
-        </div>
-        <div class="accordion-content">
-          <p>
-            Founded in 2010, 12th & Pine began as a small boutique store with a vision to bring the finest wines and spirits
-            from renowned vineyards and distilleries to our local community. Over the years, we have expanded our offerings,
-            established partnerships with top producers worldwide, and built a loyal customer base that values quality and
-            authenticity.
-          </p>
-        </div>
+      <!-- Vodka Category -->
+      <div class="category-card" data-category="Vodka">
+        <img src="vodka.png" alt="Vodka Collection" loading="lazy">
+        <h2>Vodka</h2>
+        <p>Explore our collection of vodkas, perfect for sipping straight or mixing into your favorite cocktails.</p>
+        <a href="vodka.html" class="btn-details" aria-label="View Vodka Details">View Details</a>
       </div>
 
-      <!-- Accordion Item 3 -->
-      <div class="accordion-item">
-        <div class="accordion-header">
-          <h3>Our Team</h3>
-          <i class="fas fa-chevron-down accordion-icon"></i>
-        </div>
-        <div class="accordion-content">
-          <p>
-            Our team is composed of passionate individuals who share a deep appreciation for fine wines and spirits. From
-            sommeliers to sales experts, each member brings unique expertise and dedication to ensure that our customers receive
-            personalized recommendations and exceptional service.
-          </p>
-        </div>
+      <!-- Rum Category -->
+      <div class="category-card" data-category="Rum">
+        <img src="rum.png" alt="Rum Collection" loading="lazy">
+        <h2>Rum</h2>
+        <p>From light and smooth to dark and spiced, our selection of rums is ideal for any occasion.</p>
+        <a href="rum.html" class="btn-details" aria-label="View Rum Details">View Details</a>
       </div>
+
+      <!-- Red Wines Category -->
+      <div class="category-card" data-category="Red Wines">
+        <img src="redwine.png" alt="Red Wines Collection" loading="lazy">
+        <h2>Red Wines</h2>
+        <p>Discover rich and bold red wines, perfect for pairing with meals or enjoying on their own.</p>
+        <a href="redwines.html" class="btn-details" aria-label="View Red Wines Details">View Details</a>
+      </div>
+
+      <!-- Champagne Category -->
+      <div class="category-card" data-category="Champagne">
+        <img src="champagne.png" alt="Champagne Collection" loading="lazy">
+        <h2>Champagne</h2>
+        <p>Celebrate life's special moments with our collection of luxurious champagnes.</p>
+        <a href="champagne.html" class="btn-details" aria-label="View Champagne Details">View Details</a>
+      </div>
+
+      <!-- Gin Category -->
+      <div class="category-card" data-category="Gin">
+        <img src="gin.png" alt="Gin Collection" loading="lazy">
+        <h2>Gin</h2>
+        <p>Our selection of artisanal gins is infused with botanical flavors for a refreshing twist.</p>
+        <a href="gin.html" class="btn-details" aria-label="View Gin Details">View Details</a>
+      </div>
+
+      <!-- Beers Category -->
+      <div class="category-card" data-category="Beers">
+        <img src="beer.png" alt="Beers Collection" loading="lazy">
+        <h2>Beers</h2>
+        <p>Explore our collection of craft, lager, and ale beers, perfect for any occasion or casual get-together.</p>
+        <a href="beer.html" class="btn-details" aria-label="View Beers Details">View Details</a>
+      </div>
+
+      <!-- Add more categories as needed -->
+      
     </div>
-  </div>
+  </main>
 
   <!-- Footer -->
   <footer>
@@ -523,6 +455,14 @@
       hamburger.classList.toggle('active');
     });
 
+    // Allow hamburger menu to be toggled via Enter key for accessibility
+    hamburger.addEventListener('keypress', (e) => {
+      if (e.key === 'Enter') {
+        navLinks.classList.toggle('active');
+        hamburger.classList.toggle('active');
+      }
+    });
+
     // Dark Mode Toggle
     const themeToggle = document.getElementById('theme-toggle');
     const currentTheme = localStorage.getItem('theme') ? localStorage.getItem('theme') : null;
@@ -543,24 +483,6 @@
         document.documentElement.setAttribute('data-theme', 'light');
         localStorage.setItem('theme', 'light');
       }
-    });
-
-    // Accordion Functionality
-    const accordionHeaders = document.querySelectorAll('.accordion-header');
-
-    accordionHeaders.forEach(header => {
-      header.addEventListener('click', () => {
-        const parent = header.parentElement;
-        const isActive = parent.classList.contains('active');
-
-        document.querySelectorAll('.accordion-item').forEach(item => {
-          item.classList.remove('active');
-        });
-
-        if (!isActive) {
-          parent.classList.add('active');
-        }
-      });
     });
   </script>
 </body>
