--- a/aboutus.html
+++ b/aboutus.html
@@ -449,7 +449,7 @@
       era. Whether you’re looking to savor a moment of luxury or to celebrate an occasion with something extraordinary, we are
       here to offer you a unique experience in every bottle. Join us at 12th & Pine, where every sip tells a story.
     </p>
-    <a href="bushrawebsite1.html" class="btn-home">Back to Home</a>
+    <a href="index.html" class="btn-home">Back to Home</a>
 
     <!-- Our Story Accordion -->
     <div class="story-accordion">
